# BizClaw

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/plans/: 2026-03-12-responsive-layout-design.md  2026-03-12-responsive-layout-implementation.md  2026-03-12-windows-portable-release.md  2026-03-14-background-refresh-design.md  2026-03-14-background-refresh-implementation.md  2026-03-14-bizclaw-icon-visual-direction.md
scripts/: build-macos-dmg.mjs  build-updater-manifest.mjs  build-updater-manifest.test.ts  prepare-tauri-signing-key.mjs  prepare-tauri-signing-key.test.ts  release-assets.test.ts  release-workflow.test.ts  run-rust-command.mjs  run-rust-command.test.ts  verify-release-version.mjs  verify-updater-release.mjs  verify-updater-release.test.ts  windows-installer.test.ts
src/: App.cancelled.test.ts  App.structure.test.ts  App.test.ts  App.vue  main.ts  styles.css  styles.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_menu.rs  commands.rs  config_store.rs  install.rs  lib.rs  main.rs  openclaw_management.rs  operation_supervisor.rs  process_exec.rs  runtime.rs  runtime_state.rs  runtime_supervisor.rs  secret_store.rs  types.rs  validation.rs
src-tauri/wix/: main.wxs
src/components/: AppAgentsSection.test.ts  AppAgentsSection.vue  AppChatSection.test.ts  AppChatSection.vue  AppConnectionSection.test.ts  AppConnectionSection.vue  AppInstallSection.vue  AppSidebar.vue  (+7 more)
(+18 files in other folders)
