[package]
name = "bizclaw"
version = "0.1.4"
description = "BizClaw 桌面接入客户端"
authors = ["Codex"]
edition = "2021"

[lib]
name = "bizclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
tempfile = "3.14"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "8.0"
